--- a/public/app/cadastro/cadastro.component.html
+++ b/public/app/cadastro/cadastro.component.html
@@ -1,1 +1,49 @@
-<h2>Inclusão de Contatos</h2>
+
+<div style='width:500'>
+<h4>Inclusão de Contatos</h4>
+
+<form>
+  <div class="form-group row">
+    <label for="nome" class="col-xs-1 col-form-label">Nome</label>
+    <div class="col-xs-7">
+    <input type="text" [(ngModel)]="nome" class="form-control" id="nome" name='nome' >
+    </div>
+    <div class="col-xs-4">{{nome}}</div>
+ </div>
+  <div class="form-group row">
+    <label for="telefone" class="col-xs-1 col-form-label">Telefone</label>
+    <div class="col-xs-7">
+    <input type="text" class="form-control" id="telefone" name='telefone' >
+    </div>
+    <div class="col-xs-4">.</div>
+ </div>
+
+  <div class="form-group row">
+    <label for="email" class="col-xs-1 col-form-label">Email</label>
+    <div class="col-xs-7">
+    <input type="email" class="form-control" id="email" name='email' >
+    </div>
+    <div class="col-xs-4">.</div>
+ </div>
+<!--
+ <div class="form-group row">
+    <label for="data_cad" class="col-xs-1 col-form-label">Data Cad.</label>
+    <div class="col-xs-7">
+    <input type="date" class="form-control" id="data_cad" name='data_cad' >
+    </div>
+    <div class="col-xs-4">.</div>
+ </div>
+-->
+
+
+
+
+
+<div class="form-group row">
+     <div class="col-xs-12">
+ <button type="submit" class="btn btn-primary">Submit</button>
+      </div>  
+ </div>
+
+ </form>
+</div>
