--- a/public/app/cadastro/cadastro.component.html
+++ b/public/app/cadastro/cadastro.component.html
@@ -2,7 +2,7 @@
 <div style='width:500'>
 <h4>Inclusão de Contatos</h4>
 
-<form>
+<form method='POST' (submit)="cadastrar($event)">
   <div class="form-group row">
     <label for="nome" class="col-xs-1 col-form-label">Nome</label>
     <div class="col-xs-7">
@@ -34,9 +34,6 @@
     <div class="col-xs-4">.</div>
  </div>
 -->
-
-
-o
 
 
 <div class="form-group row">
